--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -33,6 +33,14 @@ width: 400px;
   border-radius: 50%;
 }
 
+.isOnline {
+    background-color: green;
+}
+
+.isOffline {
+    background-color: red;
+}
+
 .avatar {
   width: 95px;
   height: 95px;
